fix: hero responive spacing

--- a/starter-code/src/sass/main.scss
+++ b/starter-code/src/sass/main.scss
@@ -45,6 +45,7 @@ body {
   @media (min-width: 600px) {
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 29px;
   }
 
   img {
@@ -59,6 +60,9 @@ body {
     letter-spacing: -0.444444px;
     margin-bottom: 20px;
     margin-top: 20px;
+    @media (min-width: 600px) {
+      margin-top: 0;
+    }
   }
 
   &-icons {
